# tenant-onboarding

./: .gitignore  Cargo.toml  README.md  Tenant-Onboarding-Form.yaml  Tenant-Onboarding-Form1.yaml  config.yaml  github_api_collection.json  settings.yaml  startup.sh  tenant-config.yaml  tenant.json
.github/workflows/: onboarding-service.txt  onboarding-service.yaml  push.txt  push.yaml
dbscripts/: cool-tenant_dev_db_script.js
scripts/: package-lock.json  package.json  service.js  tenant.json  tools.js
src/: dbscripts.rs  main.rs  team.rs
src/gitsource/: authtoken.rs  gitbranches.rs  githooks.rs  gitrepo.rs  gitteam.rs  gitutils.rs
tenant-config-scripts/: README.md  branchLock.py  branchUnlock.py  directFixTenantFiles.py  fixTenantFiles.py  githubBranches.py  linkFinder.py  linkFixer.py  privatizeRepos.py  rulesetUpdate.py
